# rosettastune

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  pyproject.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: unit-alias-policy.md
docs/prompts/: 001-rosetta-stune.json  002-create-rosetta-stune.json  rosetta-stune.json
python/rosettastune/: __init__.py  api.py
python/rosettastune/data/: lexicon.jsonld
src/: lib.rs
tests/: lexicon_snapshot.rs  test_rosettastune.py
tests/snapshots/: lexicon_snapshot__lexicon_snapshot_matches_expected_units.snap
